# Badminton_Action_Classification

./: .gitignore  docker-compose.yml  package-lock.json  render.yaml
model/: .gitignore  Dockerfile  Makefile  PROJECT_REPORT.html  README.md  export_history.py  history.csv  history.json  pyproject.toml  requirements.txt
model/.github/workflows/: ci.yml
model/configs/: default.yaml  finetune.yaml  improved.yaml  improved_real.yaml  stgcn.yaml  stgcn_real.yaml
model/docs/: PROJECT_REPORT.html  PROJECT_TRACKER.md  colab_pipeline.ipynb
model/scripts/: convert_external.py  cv_synth_train.py  extract_keypoints.py  generate_synthetic_from_existing.py  make_synthetic_data.py  tune.py
model/src/badminton/: __init__.py  config.py
model/src/badminton/features/: __init__.py  keypoints.py
model/src/badminton/inference/: __init__.py  pose.py  predictor.py  video.py
model/src/badminton/models/: __init__.py  factory.py  lstm.py  stgcn.py
model/src/badminton/serving/: app.py  schemas.py
model/src/badminton/training/: __init__.py  cross_validate.py  metrics.py  train.py  transfer.py
model/tests/: test_adapters.py  test_cross_validate.py  test_features.py  test_metrics.py  test_model.py  test_predictor.py  test_split.py  test_transfer.py
nginx/: nginx.conf
website/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.mjs  out.css  package-lock.json  package.json  postcss.config.js  start_model_server.bat  start_model_server.sh  tailwind.config.ts  worker.ts
website/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  (+1 more)
(+81 files in other folders)
