[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badminton-action"
version = "0.1.0"
description = "Skeleton-based badminton action classification (production-grade)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.3", "mypy>=1.8"]
# Real video -> keypoint extraction (RTMPose via ONNX; no mmcv build needed).
pose = ["rtmlib>=0.0.13", "onnxruntime>=1.16", "opencv-python>=4.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
